--- a/Exercise07/Exercise_7.ipynb
+++ b/Exercise07/Exercise_7.ipynb
@@ -245,10 +245,10 @@
     "    pyplot.ylabel('mV')\n",
     "    cax = pyplot.subplot(122)\n",
     "    pyplot.xlabel('time (ms)')\n",
-    "    pyplot.ylabel('nM')\n",
+    "    pyplot.ylabel('mM')\n",
     "    pyplot.title('Calcium')\n",
     "    vax.plot(t_vec, soma_v_vec, color='black')\n",
-    "    cax.plot(t_vec, 1e6*soma_ca_vec, color='black')\n",
+    "    cax.plot(t_vec, soma_ca_vec, color='black')\n",
     "    pyplot.subplots_adjust(wspace = 0.3) "
    ]
   },
