--- a/Exercise07/Exercise_7_solution.ipynb
+++ b/Exercise07/Exercise_7_solution.ipynb
@@ -171,6 +171,7 @@
     "soma_v_vecL, soma_ca_vecL, t_vecL = set_recording_vectors(cellL)\n",
     "soma_v_vech, soma_ca_vech, t_vech = set_recording_vectors(cellh)\n",
     "\n",
+    "h.load_file('stdrun.hoc')\n",
     "simulate()\n",
     "\n",
     "pyplot.figure(figsize=(10,4)) # Default figsize is (8,6)\n",
