changes made to exercise 6

--- a/Exercise06/Exercise_6.ipynb
+++ b/Exercise06/Exercise_6.ipynb
@@ -75,6 +75,13 @@
     "%matplotlib inline\n",
     "import os\n",
     "from os.path import join\n",
+    "\n",
+    "retval = os.getcwd()\n",
+    "print(\"Current working directory %s\" % retval)\n",
+    "os.chdir(\"halnes/\")\n",
+    "!nrnivmodl\n",
+    "os.chdir(retval)\n",
+    "\n",
     "import numpy as np\n",
     "import pylab as plt\n",
     "import scipy.stats\n",
@@ -82,7 +89,7 @@
     "from neuron import h\n",
     "import LFPy\n",
     "\n",
-    "np.random.seed(1234)\n"
+    "np.random.seed(1234)"
    ]
   },
   {
