--- a/Exercise06/Exercise_6_solution.ipynb
+++ b/Exercise06/Exercise_6_solution.ipynb
@@ -53,6 +53,13 @@
     "%matplotlib inline\n",
     "import os\n",
     "from os.path import join\n",
+    "\n",
+    "retval = os.getcwd()\n",
+    "print(\"Current working directory %s\" % retval)\n",
+    "os.chdir(\"halnes/\")\n",
+    "!nrnivmodl\n",
+    "os.chdir(retval)\n",
+    "\n",
     "import numpy as np\n",
     "import pylab as plt\n",
     "import scipy.stats\n",
