new files for exercise 3

--- a/Exercise03/Exercise_3.ipynb
+++ b/Exercise03/Exercise_3.ipynb
@@ -1,20 +1,92 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 3: Hodgkin-Huxley model\n",
+    "\n",
+    "In the lecture, the Hodgkin-Huxley model was defined by the following set of differential equations:\n",
+    "\n",
+    "<center>__Box 1__</center>\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "\\begin{eqnarray}\n",
+    "C\\frac{dV}{dt} &=& I - \\bar g_{K^+} n^4 (V - E_{K^+}) - \\bar g_{Na^+} m^3 h(V - E_{Na^+} ) - g_L (V - E_L) \\\\ \n",
+    "\\frac{dn}{dt} &=& \\frac{n_\\infty (V) - n}{\\tau_n (V)} \\\\\n",
+    "\\frac{dm}{dt} &=& \\frac{m_\\infty (V) - m}{\\tau_m(V)} \\\\\n",
+    "\\frac{dh}{dt} &=&  \\frac{h_\\infty (V) - h}{\\tau_h (V)}\n",
+    "\\end{eqnarray}\n",
+    "</div>\n",
+    "\n",
+    "It is convenient to rewrite the last three equations in the form\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\frac{dx}{dt} = \\alpha_x(V)(1 - x) - \\beta_x (V )x  \\qquad \\mbox{where} \\ x \\in \\{n, m, h\\}.\n",
+    "\\end{equation}\n",
+    "\n",
+    "The coefficients $\\alpha_x (V )$ and $\\beta_x (V )$ represent the (voltage-dependent) activation and inactivation rates, respectively, for the gate $x$. With these coefficients, the steady-state activation variables $x_\\infty(V )$ and the time constants $\\tau_x(V )$ in the Hodgkin-Huxley equations (Box 1) are given by\n",
+    "\n",
+    "\\begin{equation}\n",
+    "x_\\infty (V) = \\frac{\\alpha_x (V)}{\\alpha_x (V) + \\beta_x (V)} \\qquad \\mbox{and} \\qquad\n",
+    "\\tau_x (V ) = \\frac 1{\\alpha_x (V) + \\beta_x(V)}.\n",
+    "\\end{equation}\n",
+    "\n",
+    "In this exercise the task is to make and test a computer program that solves the Hodgkin-Huxley model (Box 1) for a rectangular input-current pulse\n",
+    "\n",
+    "\\begin{equation}\n",
+    "I(t) = \\begin{cases} I_{\\mbox{max}} & t_{\\mbox{stim,on}} \\le t \\le t_{\\mbox{stim,off}} \\\\ 0 & \\mbox{else} \\end{cases}\n",
+    "\\end{equation}\n",
+    "\n",
+    "and with the initial condition\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "V(0) &=& V_{\\mbox{rest}}  \\\\\n",
+    "n(0) &=& n_\\infty (V_{\\mbox{rest}}) \\\\\n",
+    "m(0) &=& m_\\infty (V_{\\mbox{rest}}) \\\\\n",
+    "h(0) &=& h_\\infty (V_{\\mbox{rest}})\\;.\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "Here, $V_{\\mbox{rest}}$ denotes the resting potential of the neuron, i.e. the stationary membrane potential in the absence of any input $I$. \n",
+    "\n",
+    "Many numerical schemes exist for solving ('evaluating') sets of differential equations. Here you can use the simplest one, that is the _forward Euler_ method. In this scheme the differential dynamics $dy/dt = f(y, t)$ is approximated by\n",
+    "\n",
+    "\\begin{align*}\n",
+    "&\\frac{y(t) - y(t - \\Delta t)}{\\Delta t} = f (y(t - \\Delta t), t - \\Delta t) \\nonumber \\\\\n",
+    "&\\Rightarrow  y(t) = y(t - \\Delta t) + \\Delta t \\cdot f (y(t - \\Delta t), t - \\Delta t).\n",
+    "\\end{align*}\n",
+    "\n",
+    "__(i)__  Evaluate the HH-equations (Box 1) at the times $t \\in \\{0,\\ \\Delta t,\\ 2\\Delta t,\\ \\dots ,\\ T - \\Delta t,\\ T \\}$ assuming a constant input current $I_{\\mbox{max}} = 10\\ \\mu A/cm^2$  by using the numerical forward Euler method. To this end, use the Python-script skeleton provided below. Complete the following\n",
+    "functions (search for text: `$## TO BE IMPLEMENTED` in the cells):\n",
+    "\n",
+    "* `stimulus()`\n",
+    "* `update()`\n",
+    "* `simulate()`\n",
+    "\n",
+    "A detailed description of each of these functions, i.e. what they are _supposed_ to do, is found in the documentation\n",
+    "(see docstring of the respective function). Default parameter values and parameter functions are provided in\n",
+    "Table 1 below. Note that these parameters are already implemented in the function `set\\_parameters()`. Plot the\n",
+    "input current $I(t)$ and the resulting membrane potential $V(t)$ (the code for plotting is already implemented in\n",
+    "the script skeleton). A correct implementation should lead to a figure as shown in Figure 1.\n",
+    "\n",
+    "<img src=\"fig_Ex3.png\" width = \"600\">\n",
+    "\n",
+    "\n",
+    "__(ii)__ Set the stimulus amplitude to a negative value, that is, $I_{\\mbox{max}} = -10\\ \\mu A/cm^2$, and plot the resulting membrane potential (when as in (i)  $t_{\\mbox{stim,on}}=5$ ms and $t_{\\mbox{stim,off}}=30$ ms). \n",
+    "Can you explain the result?\n",
+    "\n",
+    "__(iii)__ Use the code you have as a starting point for finding the $f-I$ curve of the HH neuron.  Note that for some 'subthreshold' currents, the HH-model responds by firing spikes for a while before becoming silent. This corresponds to zero firing rate here. What is the threshold current for sustained firing for the present version of the\n",
+    "HH-model?\n",
+    "\n",
+    "<img src=\"Table.png\" width = \"600\">\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pylab notebook\n",
     "import numpy as np"
@@ -22,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -117,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -151,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -196,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -236,24 +308,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Vm' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-b43446cf760d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m## simulate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mVm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mI\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msimulate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m## plot results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-6-6c928863d83f>\u001b[0m in \u001b[0;36msimulate\u001b[0;34m(p)\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;31m## TO BE IMPLEMENTED\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mVm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mI\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'Vm' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## set parameters\n",
     "p = set_parameters()\n",
