--- a/Exercise04/Exercise_4_solution.ipynb
+++ b/Exercise04/Exercise_4_solution.ipynb
@@ -177,9 +177,10 @@
    "source": [
     "def return_ball_and_stick_soma_hh():\n",
     "    \"\"\"\n",
-    "    Makes a ball-and-stick neuron model.\n",
+    "    Makes a ball-and-stick neuron model with hh-channels.\n",
     "    :return: soma and dendrite NEURON objects. Both must be returned, or they are lost.\n",
     "    \"\"\"\n",
+    "    \n",
     "    soma = nrn.Section('soma')\n",
     "    soma.L = 15  # um; stored as a float number\n",
     "    soma.diam = 15  # um\n",
