--- a/Exercise04/Exercise_4.ipynb
+++ b/Exercise04/Exercise_4.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Exercise 4: Ball-and stick neuron: Rall versus Eccles.\n",
     "\n",
-    "In this exercise you will use `NEURON` together with its `Python` interface. (If you are not familiar with `NEURON` and `Python` it might help to have a look at this site, which contains quite similar code to what we will be using: http://paedia.info/quickstart/pyneuron.html}.)\n",
+    "In this exercise you will use `NEURON` together with its `Python` interface. (If you are not familiar with `NEURON` and `Python` it might help to have a look at this site, which contains quite similar code to what we will be using: http://paedia.info/quickstart/pyneuron.html}).\n",
     "\n",
     "You will be given example code (below) containing a ball-and-stick neuron, and a (virtual) patch clamp electrode that is used to inject a pulse current into the soma of the cell.\n",
     "\n",
