removed redundant figure files

--- a/Exercise04/Exercise_4_solution.ipynb
+++ b/Exercise04/Exercise_4_solution.ipynb
@@ -307,7 +307,7 @@
     "    ax2.set_ylabel(\"Normalized voltage\")\n",
     "    legend(loc=4, frameon=False)\n",
     "\n",
-    "    savefig('exercise_4_1.png')"
+    "#    savefig('exercise_4_1.png')"
    ]
   },
   {
@@ -342,7 +342,7 @@
     "    ax2.set_ylabel(\"Normalized voltage\")\n",
     "    legend(loc=4, frameon=False)\n",
     "\n",
-    "    savefig('exercise_4_2.png')"
+    "#    savefig('exercise_4_2.png')"
    ]
   },
   {
@@ -377,7 +377,7 @@
     "    ax2.set_ylabel(\"Normalized voltage\")\n",
     "    legend(loc=4, frameon=False)\n",
     "\n",
-    "    savefig('exercise_4_3.png')"
+    "#    savefig('exercise_4_3.png')"
    ]
   },
   {
