told ipynb not to save plot-figures per default

--- a/Exercise06/Exercise_6.ipynb
+++ b/Exercise06/Exercise_6.ipynb
@@ -287,7 +287,7 @@
     "cell.simulate(rec_imem=False, rec_vmem=True, synpos = mypos)\n",
     "\n",
     "plot_signal(cell, synapse, mypos)\n",
-    "plt.savefig(\"cell_hbp_%s.png\" % cell_name)"
+    "#plt.savefig(\"cell_hbp_%s.png\" % cell_name)"
    ]
   },
   {
