small edit of Ex 12

--- a/Exercise12/Exercise_12.ipynb
+++ b/Exercise12/Exercise_12.ipynb
@@ -14,7 +14,9 @@
     "\n",
     "<img src=\"Bilde5.png\" width=800>\n",
     "\n",
-    "To solve exercise 12, you will run PumPy by executing the code below. A model run produces as output the transmembrane potential (Figure 1), the extracellular potential outside the soma (Figure 2), and the all ion concentrations in all four comartments (Figure 3-6). To solve the exercise, you will only make minor modifications in the first notebook cell, and the main challenge will be in interpreting the results. PumPy is implemented in Python, and if you prefer, you may download the files and execute them on your own computer and run them there. Note that the model is somewhat computationally heavy, and you may expect simulations to take roughly 10-20 s per 1 s of biological time.\n",
+    "To solve exercise 12, you will run PumPy by executing the code below. A model run produces as output the transmembrane potential (Figure 1), the extracellular potential outside the soma (Figure 2), and the all ion concentrations in all four comartments (Figure 3-6). To solve the exercise, you will only make minor modifications in the first notebook cell, and the main challenge will be in interpreting the results. \n",
+    "\n",
+    "PumPy is implemented in \"pure\" Python, and if you prefer, you may download the files and execute them on your own computer and run them there (The files Exercise_12.ipynb and Exercise_12.py contain the same code). Note that the model is somewhat computationally heavy, and you may expect simulations to take roughly 10-20 s per 1 s of biological time.\n",
     "\n",
     "\n",
     "## Task 1: How high firing rate can a neuron maintain?\n",
