modified text in solution

--- a/Exercise11/Exercise_11_solution.ipynb
+++ b/Exercise11/Exercise_11_solution.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "__iii__ The interneuron does not have a clear \"axis\" such as the pyramidal cell, i.e., it is more symmetrical and branches out from the soma in all directions. Cells that are more symmetrical, will generally not get as clean dipole LFP, and this will lead to a more rapid decay of signal power with distance, decreasing their importance for the LFP. In addition, the interneuron is less spatially extended, so the dipole and multipole moments will also be smaller for that reason. (See paper by Linden et al. (2010): Intrinsic dendritic filtering gives low-pass power spectra of local field potentials. J Comput Neurosci 29: 423-444. http://www.ncbi.nlm.nih.gov/pubmed/20502952).\n",
     "\n",
-    "<img src=\"Interneuron.png\" width = \"300\">\n",
+    "<img src=\"interneuron.png\" width = \"300\">\n",
     "__Figure 3:__ The amplitude of the LFP at a time shortly after the synaptic input has arrived in the interneuron.\n"
    ]
   },
