some text fixes

--- a/Exercise03/Exercise_3.ipynb
+++ b/Exercise03/Exercise_3.ipynb
@@ -6,9 +6,8 @@
    "source": [
     "# Exercise 3: Hodgkin-Huxley model\n",
     "\n",
-    "In the lecture, the Hodgkin-Huxley model was defined by the following set of differential equations:\n",
+    "In the lecture, the Hodgkin-Huxley model was defined by the following set of differential equations (Box 1):\n",
     "\n",
-    "<center>__Box 1__</center>\n",
     "<div class=\"alert alert-block alert-info\">\n",
     "\\begin{eqnarray}\n",
     "C\\frac{dV}{dt} &=& I - \\bar g_{K^+} n^4 (V - E_{K^+}) - \\bar g_{Na^+} m^3 h(V - E_{Na^+} ) - g_L (V - E_L) \\\\ \n",
@@ -31,7 +30,7 @@
     "\\tau_x (V ) = \\frac 1{\\alpha_x (V) + \\beta_x(V)}.\n",
     "\\end{equation}\n",
     "\n",
-    "In this exercise the task is to make and test a computer program that solves the Hodgkin-Huxley model (Box 1) for a rectangular input-current pulse\n",
+    "In this exercise the task is to make and test a computer program that solves the Hodgkin-Huxley model (Box 1) for a boxcar input current defined by\n",
     "\n",
     "\\begin{equation}\n",
     "I(t) = \\begin{cases} I_{\\mbox{max}} & t_{\\mbox{stim,on}} \\le t \\le t_{\\mbox{stim,off}} \\\\ 0 & \\mbox{else} \\end{cases}\n",
@@ -64,9 +63,9 @@
     "\n",
     "A detailed description of each of these functions, i.e. what they are _supposed_ to do, is found in the documentation\n",
     "(see docstring of the respective function). Default parameter values and parameter functions are provided in\n",
-    "Table 1 below. Note that these parameters are already implemented in the function `set\\_parameters()`. Plot the\n",
+    "Table 1 below. Note that these parameters are already implemented in the function `set_parameters()`. Plot the\n",
     "input current $I(t)$ and the resulting membrane potential $V(t)$ (the code for plotting is already implemented in\n",
-    "the script skeleton). A correct implementation should lead to a figure as shown in Figure 1.\n",
+    "this notebook). A correct implementation should replicate the results shown in Figure 1.\n",
     "\n",
     "<img src=\"fig_Ex3.png\" width = \"600\">\n",
     "\n",
@@ -83,9 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%pylab notebook\n",
@@ -309,9 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## set parameters\n",
@@ -344,7 +339,7 @@
     "ylim(np.min(Vm)-offset, np.max(Vm)+offset)\n",
     "sp2.set_position([0.1, 0.1, 0.8, 0.5])\n",
     "\n",
-    "savefig('exercise_3_result.png')  ## saves figure as pdf file\n"
+    "savefig('exercise_3_result.png')  ## saves figure as png file\n"
    ]
   },
   {
@@ -382,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
