--- a/Exercise03/Exercise_3_solution.ipynb
+++ b/Exercise03/Exercise_3_solution.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Solution to Exercise 3: Hodgkin-Huxley model\n",
     "\n",
-    "__(i)__ A function version of the code is found below.\n",
+    "__(i)__ A functional version of the solution code is found below.\n",
     "\n",
     "__(ii)__ The result should look like in the figure produced by the code (Figure 1). The rebound spike occurs since during the long hyperpolarization, the inactivation parameter $h$ increases while $n$ is reduced. When the negative input current is removed, $m$ also increases, while $h$ and $n$ change only slowly, so that the product $m^3h$ remains large for a while, and the hyperpolarizing potassium current remains small for a while. In this example the sodium current is in fact large enough to reach the threshold for spike generation."
    ]
@@ -14,9 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%pylab notebook\n",
@@ -261,9 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## set parameters\n",
@@ -296,7 +292,7 @@
     "ylim(np.min(Vm)-offset, np.max(Vm)+offset)\n",
     "sp2.set_position([0.1, 0.1, 0.8, 0.5])\n",
     "\n",
-    "savefig('exercise_3_result.png')  ## saves figure as pdf file\n"
+    "savefig('exercise_3_result.png')  ## saves figure as png file\n"
    ]
   },
   {
@@ -306,7 +302,8 @@
     "__(iii)__ By modifying the code to return the firing rate for a given input current (or running a series of simulations, reading it off manually), you can (given some patience) obtain a figure like the one in Figure 2. The threshold current is about 6.2 $\\mu$A/cm$^2$.\n",
     "\n",
     "<img src=\"firingrate.png\" width = \"500\">\n",
-    "__Figure 2:__Result of (iii), showing the $f-I$ curve of the Hodgkin-Huxley model. Code for producing this result is not provided here."
+    "\n",
+    "**Figure 2:** Result of **(iii)**, showing the $f-I$ curve of the Hodgkin-Huxley model. Code for producing this result is not provided here."
    ]
   },
   {
@@ -335,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
